@@ -5,13 +5,18 @@
 	<targetVersion>1.0.2059</targetVersion>
 	<url>https://ludeon.com/forums/index.php?topic=26276.0</url>
 	<description>"chicken nest"
-	Ver.: 1.0-1.0.0
+	Ver.: 1.0-1.0.1
 	
 	adds a nest for small animals to the game. made out of hay, same stats as the animal sleeping box. don't needs research to build.
 	you can rotate the nest to switch between a darker and a lighter texture.
 	
 	Download links for Dropbox (current or older versions) or Steamworkshop link for current Rimworld version can be found in the ludeon forum thread linked above.
 
-	Languages: english, german, ChineseSimplified (thx to WishingLaws)</description>
+	additional languages:
+	- ChineseSimplified by WishingLaws
+	- spanish by CANALETA
+	- spanish latin by CANALETA
+	- german by sulusdacor
+	</description>
 	
 	</ModMetaData>
